--- a/Python_literals.ipynb
+++ b/Python_literals.ipynb
@@ -50,34 +50,41 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "hxd3DJylfh-A"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "### Literals\n",
         "\n",
         "a) What will the output be without using Python? Aim for 80% accuracy.\n",
         "\n",
-        "```print(5 + 2 - 2)```\n",
+        "```print(5 + 2 - 2)```output:5\n",
         "\n",
-        "```print(5 / 2)```\n",
+        "```print(5 / 2)```output:2.5\n",
         "\n",
-        "```print(6 // 2) # // integer division```\n",
+        "```print(6 // 2) # // integer division```output:3\n",
         "\n",
-        "```print(2. * 3)```\n",
+        "```print(2. * 3)```output:6.0\n",
         "\n",
-        "```print(2 < 4)```\n",
+        "```print(2 < 4)```output:True\n",
         "\n",
-        "```print(2 >= 2)```\n",
+        "```print(2 >= 2)```output:False\n",
         "\n",
-        "```print(\"Hello\"+\"World\")```\n",
+        "```print(\"Hello\"+\"World\")```output:\"HelloWorld\"\n",
         "\n",
-        "```print(\"bla\" * 3)```\n",
+        "```print(\"bla\" * 3)```output:\"blablabla\"\n",
         "\n",
-        "```print(2 * 3 ** 3)```\n",
+        "```print(2 * 3 ** 3)```output:216\n",
         "\n",
-        "```print(5 * 25 // 13 + 100 / 2 % 13 // 2)```\n",
+        "```print(5 * 25 // 13 + 100 / 2 % 13 // 2)```Output:14\n",
         "\n",
-        "```print(2 * 3 % 5)```\n",
+        "```print(2 * 3 % 5)```output:1\n",
         "\n",
-        "```print((2 % -4), (2 % 4), (2 ** 3 ** 2))```\n"
+        "```print((2 % -4), (2 % 4), (2 ** 3 ** 2))```Output:(0,0,64)\n"
       ],
       "metadata": {
         "id": "uQxH0KO0tsDc"
@@ -95,13 +102,278 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "print(5+2-2) # output 5"
       ],
       "metadata": {
-        "id": "tLQh-A7Kt70H"
+        "id": "tLQh-A7Kt70H",
+        "outputId": "6f336118-a828-4434-f531-0c0240d2350b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(5/2)"
+      ],
+      "metadata": {
+        "id": "rvK9pkJzgG_s",
+        "outputId": "771b40a0-2811-4181-896c-3b224bbbbf55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(6//2)"
+      ],
+      "metadata": {
+        "id": "qlPRhlwNgPdV",
+        "outputId": "06409f68-0683-4731-c032-af2f74d6573b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(2.*3)"
+      ],
+      "metadata": {
+        "id": "56NjqW9AgsMU",
+        "outputId": "2aa9fee7-6264-4fe5-f2da-cb66899b17ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(2<4)"
+      ],
+      "metadata": {
+        "id": "SNZC-V5sg3og",
+        "outputId": "e913f8ab-52f4-4e40-81bb-29fe77f99ca2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(2>=2)"
+      ],
+      "metadata": {
+        "id": "1CLQD-e1hCKG",
+        "outputId": "6896556f-542e-4d07-d789-fa45cd6b6c54",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello\"+\"World\")"
+      ],
+      "metadata": {
+        "id": "l1yrGRWkhchi",
+        "outputId": "5df291b5-8385-4ea9-d4d0-47489c064538",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HelloWorld\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"bla\"*3)"
+      ],
+      "metadata": {
+        "id": "GLtlwgMUhkvU",
+        "outputId": "65b5e857-58c2-42e2-fd43-d7e816505ca5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "blablabla\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(2*3**3)"
+      ],
+      "metadata": {
+        "id": "MEedjKC1h2I0",
+        "outputId": "333ebb4d-fd69-4d5c-c54d-50b58ad2de78",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "54\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(5*25//13+100/2%13//2)"
+      ],
+      "metadata": {
+        "id": "VEqV776ViXSI",
+        "outputId": "c270cb5d-366e-4b39-e6b6-d891ba5773a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "14.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(2*3%5)"
+      ],
+      "metadata": {
+        "id": "6xBAvoEbihXS",
+        "outputId": "3a4530ac-948d-45cd-f457-814938ad54dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print((2%-4),(2%4),(2**3**2))"
+      ],
+      "metadata": {
+        "id": "irL_ogZRimm1",
+        "outputId": "a1f3fd52-0740-415a-da74-6c5c98aefb43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-2 2 512\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -137,7 +409,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer here"
+        "type(1+\"2\") output:type error\n",
+        "\n",
+        "type(1.) output:float 1.0\n",
+        "\n",
+        "type('A') output:A\n",
+        "\n",
+        "type(500) output: 500\n",
+        "\n",
+        "type(True) output: True\n",
+        "\n",
+        "type(\"False\") output:"
       ],
       "metadata": {
         "id": "TZ3zlabVMebV"
@@ -155,13 +437,186 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "type(1+\"2\")"
       ],
       "metadata": {
-        "id": "kLoyOaLLLnSK"
+        "id": "kLoyOaLLLnSK",
+        "outputId": "81ffe4fe-501e-4ae0-de6c-70e926f4833f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-115eef856398>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"2\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(1.)"
+      ],
+      "metadata": {
+        "id": "iJDJllFfl1ZO",
+        "outputId": "86588e28-93bb-4230-9817-7becad982bf0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(1.)"
+      ],
+      "metadata": {
+        "id": "kEH2FNFnmW2J",
+        "outputId": "288c1156-2188-4763-85b6-0cd0237a0938",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type('A')"
+      ],
+      "metadata": {
+        "id": "cCVtJ55EmgHS",
+        "outputId": "426ec895-e413-4f30-9bb2-697e6db8769c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(500)"
+      ],
+      "metadata": {
+        "id": "dco_miu2mlWa",
+        "outputId": "f5df4c1a-90b4-4b63-9638-402f3276975f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(True)"
+      ],
+      "metadata": {
+        "id": "AOJtwbxzmpo3",
+        "outputId": "32a1081f-9d2b-41da-b605-9702777dbfbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(\"False\")"
+      ],
+      "metadata": {
+        "id": "UAX5PQfFmsEB",
+        "outputId": "f17fc581-557b-46f5-8c87-68adbc1ffbc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -182,15 +637,15 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# Write your code here"
+        "5*\n",
+        "50%26+200/-2*\n",
+        "26//4**3"
       ],
       "metadata": {
-        "id": "iJH2iRokL14f"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "nPJhVqdYG_4q"
+      }
     },
     {
       "cell_type": "markdown",
@@ -218,7 +673,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer here"
+        "5*\n",
+        "50%26+200/-2*26//4\n",
+        "*\n",
+        "*3\n",
+        "\n",
+        "250%26+200/-2\n",
+        "*26//4\n",
+        "*\n",
+        "*3\n",
+        "\n",
+        "16+200/-2\n",
+        "*26//4\n",
+        "*\n",
+        "*3\n",
+        "\n",
+        "16-100\n",
+        "*26//4\n",
+        "\n",
+        "16-2600//4\n",
+        "\n",
+        "16-650\n",
+        "\n",
+        "-634.0"
       ],
       "metadata": {
         "id": "cKsvL_1JMRVJ"
@@ -236,13 +713,28 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "5*50%26+200/-2*26//4"
       ],
       "metadata": {
-        "id": "oyX3LQADM4IY"
+        "id": "oyX3LQADM4IY",
+        "outputId": "a1b06b41-b69f-49a0-95be-333cbe2c109d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-634.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -258,7 +750,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write your challenges here"
+        "Do I need remember about int,float str, bool?"
       ],
       "metadata": {
         "id": "qfJNpTB5EbY4"
